<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="#EDB147"
        android:textSize="40sp"/>

    <Button
        android:id="@+id/directionsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#EDB147"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/directions"
        android:textSize="24sp"
        android:layout_margin="20dp"/>

    <Button
        android:id="@+id/infoButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#EDB147"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/info_lookup"
        android:textSize="24sp"
        android:layout_margin="20dp"/>

    <Button
        android:id="@+id/emergencyButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#EDB147"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/emergency"
        android:textSize="24sp"
        android:layout_margin="20dp"/>

    <Button
        android:id="@+id/mapButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#EDB147"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/map"
        android:textSize="24sp"
        android:layout_margin="20dp"/>

    <Button
        android:id="@+id/settingsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#EDB147"
        android:textColor="@color/colorPrimaryDark"
        android:text="SETTINGS"
        android:textSize="24sp"
        android:layout_margin="20dp"/>

    <TextView
        android:id="@+id/skiAbility"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:textColor="#EDB147"
        android:textSize="30sp"/>

    <TextView
        android:id="@+id/runLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:textColor="#EDB147"
        android:textSize="30sp"/>

</LinearLayout>