<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/colorPrimary">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:text="@string/settings"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="42sp"
        android:layout_margin="20dp"
        android:gravity="top"/>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:layout_margin="20dp"
        android:id="@android:id/list">
    </ListView>

    <Button
        android:id="@+id/set_level_button"
        android:text="@string/set_level"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_rounded_corners"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:layout_margin="12dp" />

    <Button
        android:id="@+id/what_level_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/what_level"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="italic"
        android:background="@android:color/transparent"
        />

</LinearLayout>