<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                 xmlns:app="http://schemas.android.com/apk/res-auto"
                                                 xmlns:tools="http://schemas.android.com/tools"
                                                 android:layout_width="match_parent"
                                                 android:layout_height="match_parent"
                                                 android:background="#efefef"
                                                 tools:context="tizzy.skimapp.RouteFinding.DirectionsActivity">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top"
        android:orientation="vertical"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/where_to"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="32sp"
                android:layout_margin="12dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">
                <ImageButton
                    android:id="@+id/bathroom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/direction_button_round"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:padding="8dp"
                    android:src="@drawable/ic_bathroom_foreground"/>

                <ImageButton
                    android:id="@+id/food"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/direction_button_round"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:padding="8dp"
                    android:src="@drawable/ic_restaurant_foreground"/>

                <Button
                    android:id="@+id/select_dest"
                    android:layout_width="136dp"
                    android:layout_height="60dp"
                    android:text="Select Destination"
                    android:background="@drawable/button_rounded_corners_light"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:padding="8dp"/>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/route"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:textAlignment="center"
            android:textColor="#EDB147"
            android:textSize="24sp"/>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/list_view"
            android:background="#EDB147">

        </ListView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/location"
            android:textColor="#ec3300"
            android:textSize="20sp"
            android:layout_margin="12dp"
            android:textAlignment="center"/>

    </LinearLayout>


 <!--Bottom Sheet-->
    <FrameLayout
        android:id="@+id/destinationSelectionBottomSheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        app:layout_behavior="android.support.design.widget.BottomSheetBehavior">
        <!--style="?attr/bottomSheetStyle"-->


        <!-- Bottom Sheet contents -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="16dp">

            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal"
            android:background="@color/colorPrimaryDark"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:layout_gravity="center_vertical">

                <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/top_bottom_toggle"
                android:text="@string/top_bottom"
                android:textSize="12dp"
                android:textColor="@color/white"/>

                <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lift_run_toggle"
                android:text="@string/lift_run"
                android:textSize="12dp"
                android:textColor="@color/white"/>

                </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@android:color/white"/>

                <Spinner
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/to_spinner"
                android:layout_marginLeft="6dp">
                </Spinner>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/white"/>

            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="12dp">

                <!-- Longer route checkbox -->
                <CheckBox
                android:id="@+id/longer_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Longer route"
                android:textSize="20dp"
                android:textColor="@color/white"
                android:padding="5dp"
                android:layout_margin="2dp"/>

                <!-- Harder route checkbox -->
                <CheckBox
                android:id="@+id/harder_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Harder route"
                android:textSize="20dp"
                android:textColor="@color/white"
                android:padding="5dp"
                android:layout_margin="2dp"/>

                <!-- Groomers checkbox -->
                <CheckBox
                android:id="@+id/groomers_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Groomers only"
                android:textSize="20dp"
                android:textColor="@color/white"
                android:padding="5dp"
                android:layout_margin="2dp"/>

            </LinearLayout>

            <Button
                android:id="@+id/go_button"
                android:layout_gravity="center"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/button_round"
                android:textColor="@color/white"
                android:text="@string/go"
                android:textSize="20sp"
                android:layout_margin="10dp"/>

        </LinearLayout>

    </FrameLayout>

</android.support.design.widget.CoordinatorLayout>